--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,13 @@
-theme: jekyll-theme-minimal
+title: Nádia Pinto
+description: 
+show_downloads: false
+#google_analytics: G-3JWYKYVYDZ
+theme: jekyll-theme-hacker
+listen_for_clients_preferred_style: true # false (default) or true
+footer: 'follow me on <a href="https://twitter.com/NdiaPinto6">twitter</a>'
+
+plugins:
+  - jekyll-redirect-from
+github:
+  repository_url: https://github.com/econdesousa/
+
